--- a/application/package.json
+++ b/application/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^3.4.1",
     "leaflet": "^1.6.0",
     "leaflet-routing-machine": "^3.2.12",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.4.1"
   },
   "scripts": {
